--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
         <p>Become part of the BMW community</p>
       </div>
     </section>
-    <div class="instagram">
-      <div class="instagram_screen">
+    <div class="screens">
+      <div class="instagram_screen col_left">
         <header class="insta_header">
           <div class="insta_name-logo">
             <a href="#" class="insta_bmwlogo">
@@ -483,6 +483,100 @@
             <a href="#" class="embedSpriteSaveOpen"></a>
           </div>
           <p>176,961 likes</p>
+        </section>
+        <footer class="insta_comments">
+          <p>Add a comment</p>
+          <a class="insta-logo"></a>
+        </footer>
+      </div>
+      <div class="instagram_screen col_mid">
+        <header class="insta_header">
+          <div class="insta_name-logo">
+            <a href="#" class="insta_bmwlogo">
+              <img
+                src="https://scontent-amt2-1.cdninstagram.com/vp/badbbdd507b28cf4f4e8949388a7f549/5DD0D5B9/t51.2885-19/s150x150/15034509_1126259947428298_8459324121132564480_a.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
+                alt="bmwm"
+              />
+            </a>
+            <a href="#"
+              ><p class="insta_name">
+                bmwm
+                <span
+                  class="Sprite VerifiedSprite embedSpriteVerifiedBadgeSmall"
+                >
+                  Verified
+                </span>
+              </p>
+              <p class="insta_followers">5m followers</p>
+            </a>
+          </div>
+          <p class="insta_btn">View Profile</p>
+        </header>
+        <section class="insta_image">
+          <img
+            src="https://scontent-amt2-1.cdninstagram.com/vp/8b9d58157ed61ae39e35a223258d10a6/5DD93DEA/t51.2885-15/e35/p1080x1080/66018528_2321299694788032_87732446430419676_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
+            alt="#"
+          />
+          <p>View More on Instagram</p>
+        </section>
+        <section class="insta-likes">
+          <div class="insta-likes_symbols">
+            <div class="insta-likes_symbols left">
+              <a href="#" class="LikeSprite embedSpriteHeartOpen"></a>
+              <a href="#" class="LikeSpriteHover embedSpriteHeartOpenRed"></a>
+              <a href="#" class="embedSpriteComment"></a>
+              <a href="#" class="embedSpriteShare"></a>
+            </div>
+            <a href="#" class="embedSpriteSaveOpen"></a>
+          </div>
+          <p>65,036 likes</p>
+        </section>
+        <footer class="insta_comments">
+          <p>Add a comment</p>
+          <a class="insta-logo"></a>
+        </footer>
+      </div>
+      <div class="instagram_screen col_right">
+        <header class="insta_header">
+          <div class="insta_name-logo">
+            <a href="#" class="insta_bmwlogo">
+              <img
+                src="https://scontent-amt2-1.cdninstagram.com/vp/badbbdd507b28cf4f4e8949388a7f549/5DD0D5B9/t51.2885-19/s150x150/15034509_1126259947428298_8459324121132564480_a.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
+                alt="bmwm"
+              />
+            </a>
+            <a href="#"
+              ><p class="insta_name">
+                bmwm
+                <span
+                  class="Sprite VerifiedSprite embedSpriteVerifiedBadgeSmall"
+                >
+                  Verified
+                </span>
+              </p>
+              <p class="insta_followers">5m followers</p>
+            </a>
+          </div>
+          <p class="insta_btn">View Profile</p>
+        </header>
+        <section class="insta_image">
+          <img
+            src="https://scontent-amt2-1.cdninstagram.com/vp/4936e242af524609a5f3328d1cec17d5/5DCD37B9/t51.2885-15/fr/e15/p1080x1080/66361328_943143699365116_8990394890925846419_n.jpg?_nc_ht=scontent-amt2-1.cdninstagram.com"
+            alt="#"
+          />
+          <p>View More on Instagram</p>
+        </section>
+        <section class="insta-likes">
+          <div class="insta-likes_symbols">
+            <div class="insta-likes_symbols left">
+              <a href="#" class="LikeSprite embedSpriteHeartOpen"></a>
+              <a href="#" class="LikeSpriteHover embedSpriteHeartOpenRed"></a>
+              <a href="#" class="embedSpriteComment"></a>
+              <a href="#" class="embedSpriteShare"></a>
+            </div>
+            <a href="#" class="embedSpriteSaveOpen"></a>
+          </div>
+          <p>69,912 likes</p>
         </section>
         <footer class="insta_comments">
           <p>Add a comment</p>
