--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
           <a class="insta-logo"></a>
         </footer>
       </div>
-      <div class="facebook_screen">
+      <div class="facebook_screen col_left">
         <header class="face_header">
           <div class="face_header_logo-name">
             <a href="#" class="face_header_logo logo1">
@@ -599,13 +599,84 @@
           </div>
           <a href="#" class="face_header_icon"></a>
         </header>
-        <section class="face_image">
+        <section class="face_image image-left">
           <img
             src="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-0/p350x350/66156520_2249550998415251_42396382388027392_n.jpg?_nc_cat=106&_nc_oc=AQkUM6xUPFvfcXjpbFJv-ZxE0vCprMTBAWLPm_YLtYAHiDBDSVskorqL404-JarMqiE&_nc_ht=scontent-amt2-1.xx&oh=d05cee5c555ec280032f9f7e87e8a29c&oe=5DE301D5"
             alt=""
           />
         </section>
         <section class="face_text"></section>
+        <footer class="face_likes">
+          <div class="face_likes-icons">
+            <div class="face_likes-thumb">
+              <a href="#" class="thumb"></a>
+              <a href="#" class="thumb-amount">181</a>
+            </div>
+            <div class="face_likes-comments">
+              <a href="#" class="comment"></a>
+              <a href="#" class="comment-amount">6</a>
+            </div>
+            <div class="face_likes-shares">
+              <a href="#" class="share"></a>
+              <a href="#" class="share-amount">11</a>
+            </div>
+          </div>
+        </footer>
+      </div>
+      <div class="facebook_screen col_mid">
+        <header class="face_header">
+          <div class="face_header_logo-name">
+            <a href="#" class="face_header_logo logo2">
+              <img
+                src="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-1/p40x40/14054059_1460241470670221_6422760862862529181_n.png?_nc_cat=109&_nc_oc=AQko9FhsXug4TLFgxuJXevTfncpBqX7oTLToO5yHUsLxD3a1qBDfc7tqDnCWIDZZVN4&_nc_ht=scontent-amt2-1.xx&oh=b10cca44e563343921c61c2e639a5881&oe=5DD2DE0D"
+                alt=""
+              />
+            </a>
+            <div class="face_header_name">
+              <h4>BMW M</h4>
+              <a href="#">about a month ago</a>
+            </div>
+          </div>
+          <a href="#" class="face_header_icon"></a>
+        </header>
+        <section class="face_image image-mid">
+          <img
+            src="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-0/p350x350/65780379_2729136607114028_5622327488584613888_n.jpg?_nc_cat=100&_nc_oc=AQmEBWe4CNgROBVdB_C_-mKxX1Qo6BuAUSbIY7Cv_W21veKF0_Ced6znQL6riCTh6oI&_nc_ht=scontent-amt2-1.xx&oh=9555ae4779f00117bb7be85c80ebe82b&oe=5DEA7135"
+            alt=""
+          />
+        </section>
+        <section class="face_text">
+          <p>
+            Pictured: A triumph of engineering. Also, a nice bridge.<br />The
+            BMW i8 Coupé. THE i8. <br />
+            Photo by @californiaexoticsdaily via Instagram.
+            <br />
+            __<br />
+            BMW i8 Coupé: Energy consumption in kWh/100 km (combined): 14.0.
+            Fuel consumption in l/100 km (combined): 1.8. CO2 emissions in g/km
+            (combined): 42. The values of fuel consumptions, CO2 emissions and
+            energy consumptions shown were determined according to the European
+            Regulation (EC) 715/2007 in the version applicable at the time of
+            type approval. The figures refer to a vehicle with basic
+            configuration in Germany and the range shown considers optional
+            equipment and the different size of wheels and tires available on
+            the selected model. The values of the vehicles are already based on
+            the new WLTP regulation and are translated back into NEDC-equivalent
+            values in order to ensure the comparison between the vehicles. [With
+            respect to these vehicles, for vehicle related taxes or other duties
+            based (at least inter alia) on CO2-emissions the CO2 values may
+            differ to the values stated here.] The CO2 efficiency specifications
+            are determined according to Directive 1999/94/EC and the European
+            Regulation in its current version applicable. The values shown are
+            based on the fuel consumption, CO2 values and energy consumptions
+            according to the NEDC cycle for the classification. For further
+            information about the official fuel consumption and the specific CO2
+            emission of new passenger cars can be taken out of the „handbook of
+            fuel consumption, the CO2 emission and power consumption of new
+            passenger cars“, which is available at all selling points and at
+            https://www.dat.de/…/ver…/leitfaden-kraftstoffverbrauch.html.
+          </p>
+        </section>
         <footer class="face_likes">
           <div class="face_likes-icons">
             <div class="face_likes-thumb">
