--- a/index.html
+++ b/index.html
@@ -681,15 +681,15 @@
           <div class="face_likes-icons">
             <div class="face_likes-thumb">
               <a href="#" class="thumb"></a>
-              <a href="#" class="thumb-amount">181</a>
+              <a href="#" class="thumb-amount">7.5K</a>
             </div>
             <div class="face_likes-comments">
               <a href="#" class="comment"></a>
-              <a href="#" class="comment-amount">6</a>
+              <a href="#" class="comment-amount">64</a>
             </div>
             <div class="face_likes-shares">
               <a href="#" class="share"></a>
-              <a href="#" class="share-amount">11</a>
+              <a href="#" class="share-amount">240</a>
             </div>
           </div>
         </footer>
