--- a/index.html
+++ b/index.html
@@ -674,7 +674,9 @@
             emission of new passenger cars can be taken out of the „handbook of
             fuel consumption, the CO2 emission and power consumption of new
             passenger cars“, which is available at all selling points and at
-            https://www.dat.de/…/ver…/leitfaden-kraftstoffverbrauch.html.
+            <a href="#"
+              >https://www.dat.de/…/ver…/leitfaden-kraftstoffverbrauch.html.</a
+            >
           </p>
         </section>
         <footer class="face_likes">
@@ -690,6 +692,78 @@
             <div class="face_likes-shares">
               <a href="#" class="share"></a>
               <a href="#" class="share-amount">240</a>
+            </div>
+          </div>
+        </footer>
+      </div>
+      <div class="facebook_screen col_right">
+        <header class="face_header">
+          <div class="face_header_logo-name">
+            <a href="#" class="face_header_logo logo2">
+              <img
+                src="https://scontent-amt2-1.xx.fbcdn.net/v/t34.0-1/p40x40/39034762_1214789818698896_122681412_n.png?_nc_cat=1&_nc_oc=AQmJf3N-iuuxDK2it9ZmrNLVNyg1_irWzBJk-hvk8sk6hf0Hp6k9nooMkTJPNpE0DrM&_nc_ht=scontent-amt2-1.xx&oh=3c9e12b2676fe754b607d7dfcff7f262&oe=5D4D50B4"
+                alt=""
+              />
+            </a>
+            <div class="face_header_name">
+              <h4>BMW M</h4>
+              <a href="#">about a month ago</a>
+            </div>
+          </div>
+          <a href="#" class="face_header_icon"></a>
+        </header>
+        <section class="face_image image-right">
+          <img
+            src="https://scontent-amt2-1.xx.fbcdn.net/v/t1.0-0/p350x350/66399260_10157733921347269_8926673943700439040_n.jpg?_nc_cat=101&_nc_oc=AQkLV2t1NHDscdDhThVr0ES5uwwBn90vooh0plJw6mezpzcIvndM4Wxpch8e7gj0TpI&_nc_ht=scontent-amt2-1.xx&oh=06975c8145e1792ccbea37fc414b021a&oe=5DEA80D2"
+            alt=""
+          />
+        </section>
+        <section class="face_text">
+          <p>
+            Obstacles are literally not real things for top class leaders.
+            <br />
+            The BMW X7. THE X7<br />
+            __<br />
+            BMW X7 M50d: Fuel consumption in l/100 km (combined): 7.4 - 7.0. CO2
+            emissions in g/km (combined): 193 - 185, exhaust standard EU6d-TEMP.
+            The values of fuel consumptions, CO2 emissions and energy
+            consumptions shown were determined according to the European
+            Regulation (EC) 715/2007 in the version applicable at the time of
+            type approval. The figures refer to a vehicle with basic
+            configuration in Germany and the range shown considers optional
+            equipment and the different size of wheels and tires available on
+            the selected model. The values of the vehicles are already based on
+            the new WLTP regulation and are translated back into NEDC-equivalent
+            values in order to ensure the comparison between the vehicles. [With
+            respect to these vehicles, for vehicle related taxes or other duties
+            based (at least inter alia) on CO2-emissions the CO2 values may
+            differ to the values stated here.] The CO2 efficiency specifications
+            are determined according to Directive 1999/94/EC and the European
+            Regulation in its current version applicable. The values shown are
+            based on the fuel consumption, CO2 values and energy consumptions
+            according to the NEDC cycle for the classification. For further
+            information about the official fuel consumption and the specific CO2
+            emission of new passenger cars can be taken out of the „handbook of
+            fuel consumption, the CO2 emission and power consumption of new
+            passenger cars“, which is available at all selling points and at
+            <a href="#">
+              https://www.dat.de/…/ver…/leitfaden-kraftstoffverbrauch.html.</a
+            >
+          </p>
+        </section>
+        <footer class="face_likes">
+          <div class="face_likes-icons">
+            <div class="face_likes-thumb">
+              <a href="#" class="thumb"></a>
+              <a href="#" class="thumb-amount">8.3K</a>
+            </div>
+            <div class="face_likes-comments">
+              <a href="#" class="comment"></a>
+              <a href="#" class="comment-amount">216</a>
+            </div>
+            <div class="face_likes-shares">
+              <a href="#" class="share"></a>
+              <a href="#" class="share-amount">192</a>
             </div>
           </div>
         </footer>
