--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/bbb7b987c0.js"></script>
     <link rel="stylesheet" href="style.css" />
 
     <script src="https://kit.fontawesome.com/bbb7b987c0.js"></script>
@@ -766,6 +767,91 @@
               <a href="#" class="share-amount">192</a>
             </div>
           </div>
+        </footer>
+      </div>
+      <div class="twitter_screen col_left">
+        <header class="twitter_header">
+          <div class="twitter_name-logo">
+            <a href="#" class="twitter_bmwlogo">
+              <img
+                src="https://pbs.twimg.com/profile_images/798842691928788996/j6CNvjmW_bigger.jpg"
+                alt="bmw"
+              />
+            </a>
+            <a href="#"
+              ><h4 class="twitter_name">
+                BMW I
+                <span
+                  class="Sprite VerifiedSprite embedSpriteVerifiedBadgeSmall"
+                >
+                  Verified
+                </span>
+              </h4>
+              <p class="twitter_followers">@BMWi</p>
+            </a>
+          </div>
+          <a href="#" class="twitter_logo fab fa-twitter"></a>
+        </header>
+        <section class="twitter_text">
+          <p>
+            More than ready to hit the road.<br />The BMW i8 Roadster.
+            <a
+              href="https://twitter.com/hashtag/BMWi?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span>#</span><span>BMWi</span></a
+            >
+            <a
+              href="https://twitter.com/hashtag/THEi8?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span>#</span><span>THEi8</span></a
+            ><a
+              href="https://twitter.com/hashtag/BMWiRepost?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span>#</span><span>BMWiRepost</span></a
+            >
+            by eastcoastcarphotographer via Instagram.<a
+              href="https://t.co/W3WmHOw0Nx"
+              rel="nofollow noopener"
+              dir="ltr"
+              data-expanded-url="http://b.mw/i8roadsterdisclaimer"
+              target="_blank"
+              title="http://b.mw/i8roadsterdisclaimer"
+              data-scribe="element:url"
+              ><span>http://</span
+              >b.mw/i8roadsterdisc<span>laimer&nbsp;</span>…</a
+            >
+          </p>
+        </section>
+        <section class="twitter_image">
+          <img
+            src="https://pbs.twimg.com/media/D_ccnVNXUAQuv_y?format=jpg&name=900x900"
+            alt="#"
+          />
+        </section>
+        <section class="twitter-likes">
+          <div class="twitter-likes_symbols">
+            <div class="twitter-likes_symbols left">
+              <a href="#" class="LikeSprite embedSpriteHeartOpen"></a>
+              <a href="#" class="LikeSpriteHover embedSpriteHeartOpenRed"></a>
+              <p>252</p>
+              <a href="#">5:00 PM - Jul 14, 2019</a>
+            </div>
+            <a href="#" class="fas fa-info-circle"></a>
+          </div>
+        </section>
+        <footer class="twitter_comments">
+          <a href="#" class="embedSpriteComment"></a>
+          <p>29 people are talking about this</p>
+          <a href="#" class="fas fa-chevron-right"></a>
         </footer>
       </div>
     </div>
