--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         <p>Become part of the BMW community</p>
       </div>
     </section>
-    <div class="screens">
+    <div class="screens_instagram">
       <div class="instagram_screen col_left">
         <header class="insta_header">
           <div class="insta_name-logo">
@@ -584,6 +584,8 @@
           <a class="insta-logo"></a>
         </footer>
       </div>
+    </div>
+    <div class="screens_facebook">
       <div class="facebook_screen col_left">
         <header class="face_header">
           <div class="face_header_logo-name">
@@ -769,6 +771,8 @@
           </div>
         </footer>
       </div>
+    </div>
+    <div class="screens_twitter">
       <div class="twitter_screen col_left">
         <header class="twitter_header">
           <div class="twitter_name-logo">
@@ -854,8 +858,172 @@
           <a href="#" class="fas fa-chevron-right"></a>
         </footer>
       </div>
+      <div class="twitter_screen col_mid">
+        <header class="twitter_header">
+          <div class="twitter_name-logo">
+            <a href="#" class="twitter_bmwlogo">
+              <img
+                src="https://pbs.twimg.com/profile_images/798842691928788996/j6CNvjmW_bigger.jpg"
+                alt="bmw"
+              />
+            </a>
+            <a href="#"
+              ><h4 class="twitter_name">
+                BMW I
+                <span
+                  class="Sprite VerifiedSprite embedSpriteVerifiedBadgeSmall"
+                >
+                  Verified
+                </span>
+              </h4>
+              <p class="twitter_followers">@BMWi</p>
+            </a>
+          </div>
+          <a href="#" class="twitter_logo fab fa-twitter"></a>
+        </header>
+        <section class="twitter_text">
+          <p>
+            Diversity still deserves respect.<br />The BMW i8 Roadster on
+            <a
+              href="https://twitter.com/hashtag/csd2019?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span class="PrettyLink-prefix">#</span
+              ><span class="PrettyLink-value">csd2019</span></a
+            >.
+            <a
+              href="https://twitter.com/hashtag/pride?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span class="PrettyLink-prefix">#</span
+              ><span class="PrettyLink-value">pride</span></a
+            >
+            <a
+              href="https://twitter.com/hashtag/BMWi?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span class="PrettyLink-prefix">#</span
+              ><span class="PrettyLink-value">BMWi</span></a
+            ><a
+              href="https://twitter.com/hashtag/THEi8?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span class="PrettyLink-prefix">#</span
+              ><span class="PrettyLink-value">THEi8</span></a
+            ><a
+              href="https://t.co/W3WmHOw0Nx"
+              rel="nofollow noopener"
+              dir="ltr"
+              data-expanded-url="http://b.mw/i8roadsterdisclaimer"
+              target="_blank"
+              title="http://b.mw/i8roadsterdisclaimer"
+              data-scribe="element:url"
+              ><span>http://</span
+              >b.mw/i8roadsterdisc<span>laimer&nbsp;</span>…</a
+            >
+          </p>
+        </section>
+        <section class="twitter_image">
+          <img
+            src="https://pbs.twimg.com/media/D_XppuyWwAAgGWk?format=jpg&name=900x900"
+            alt="#"
+          />
+        </section>
+        <section class="twitter-likes">
+          <div class="twitter-likes_symbols">
+            <div class="twitter-likes_symbols left">
+              <a href="#" class="LikeSprite embedSpriteHeartOpen"></a>
+              <a href="#" class="LikeSpriteHover embedSpriteHeartOpenRed"></a>
+              <p>135</p>
+              <a href="#">6:38 PM - Jul 13, 2019</a>
+            </div>
+            <a href="#" class="fas fa-info-circle"></a>
+          </div>
+        </section>
+        <footer class="twitter_comments">
+          <a href="#" class="embedSpriteComment"></a>
+          <p>23 people are talking about this</p>
+          <a href="#" class="fas fa-chevron-right"></a>
+        </footer>
+      </div>
+      <div class="twitter_screen col_right">
+        <header class="twitter_header">
+          <div class="twitter_name-logo">
+            <a href="#" class="twitter_bmwlogo">
+              <img
+                src="https://pbs.twimg.com/profile_images/798844134404435969/fc6qzNNR_bigger.jpg"
+                alt="bmw"
+              />
+            </a>
+            <a href="#"
+              ><h4 class="twitter_name">
+                BMW I
+                <span
+                  class="Sprite VerifiedSprite embedSpriteVerifiedBadgeSmall"
+                >
+                  Verified
+                </span>
+              </h4>
+              <p class="twitter_followers">@BMWi</p>
+            </a>
+          </div>
+          <a href="#" class="twitter_logo fab fa-twitter"></a>
+        </header>
+        <section class="twitter_text">
+          <p>
+            Clear lines and maximum pleasure. <br />The
+            <a
+              href="https://twitter.com/hashtag/BMW?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span class="PrettyLink-prefix">#</span
+              ><span class="PrettyLink-value">BMW</span></a
+            >
+            3 Series Sedan.
+            <a
+              href="https://twitter.com/hashtag/THE3?src=hash"
+              data-query-source="hashtag_click"
+              dir="ltr"
+              rel="tag"
+              data-scribe="element:hashtag"
+              ><span>#</span><span>THE3</span></a
+            >
+          </p>
+        </section>
+        <section class="twitter_image">
+          <img
+            src="https://pbs.twimg.com/media/D_LftqmW4AIJsn4?format=jpg&name=900x900"
+            alt="#"
+          />
+        </section>
+        <section class="twitter-likes">
+          <div class="twitter-likes_symbols">
+            <div class="twitter-likes_symbols left">
+              <a href="#" class="LikeSprite embedSpriteHeartOpen"></a>
+              <a href="#" class="LikeSpriteHover embedSpriteHeartOpenRed"></a>
+              <p>2,088</p>
+              <a href="#">10:00 PM - Jul 11, 2019</a>
+            </div>
+            <a href="#" class="fas fa-info-circle"></a>
+          </div>
+        </section>
+        <footer class="twitter_comments">
+          <a href="#" class="embedSpriteComment"></a>
+          <p>248 people are talking about this</p>
+          <a href="#" class="fas fa-chevron-right"></a>
+        </footer>
+      </div>
     </div>
-
     <footer></footer>
   </body>
 </html>
