--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,59 @@
         </footer>
       </div>
     </div>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-wrap">
+        <div class="languages">
+          <a href="#">English</a>
+          <a href="#">Deutsch</a>
+          <a href="#">Italiano</a>
+          <a href="#">Français</a>
+          <a href="#">español</a>
+        </div>
+        <div class="footer-columns">
+          <div class="footer-column quick-links">
+            <h4>Quick Links</h4>
+            <a href="#">Home</a>
+            <a href="#">BMW in your country</a>
+            <a href="#">Careers</a>
+            <a href="#">EU Detergents Regulation</a>
+            <a href="#">REACH Regulation</a>
+            <a href="#">Compatibility Check</a>
+            <a href="#">Software Update</a>
+            <a href="#">Accessories Update</a>
+          </div>
+          <div class="footer-column more-bmw">
+            <h4>More BMW Websites</h4>
+            <a href="#">BMW M</a>
+            <a href="#">BMW Motorsport</a>
+            <a href="#">BMW Golfsport</a>
+            <a href="#">BMW Yachtsport</a>
+            <a href="#">BMW Mountains</a>
+            <a href="#">BMW Driving Experience</a>
+            <a href="#">BMW Welt</a>
+            <a href="#">BMW Group Classic</a>
+            <a href="#">BMW Corporate/Direct Sales</a>
+            <a href="#">BMW Group</a>
+          </div>
+          <div class="footer-column bmwcom">
+            <h4>BMW.com</h4>
+            <a href="#">About BMW.com</a>
+            <a href="#">Contact</a>
+            <a href="#">Cookies</a>
+            <a href="#">Imprint</a>
+            <a href="#">Legal Notice/Data Protection</a>
+          </div>
+          <div class="footer-column visit-us">
+            <h4>Visit us on</h4>
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a>
+            <a href="#">Google+</a>
+            <a href="#">YouTube</a>
+          </div>
+        </div>
+        <p>&copy; BMW AG 2019</p>
+      </div>
+    </footer>
   </body>
 </html>
