--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navigation">
       <div class="navigation-bar">
         <div class="navigation-bar__mobile-menu">
-          <a href="#"> <i class="fas fa-bars"></i></a>
+          <a href="#"> <i class="fas fa-bars fa-2x"></i></a>
         </div>
         <div class="navigation-bar__items">
           <a class="navigation-bar__text-item" href="#">Home</a>
@@ -45,10 +45,17 @@
     </nav>
     <header class="intro">
       <a href="#">
-        <div class="intro-video">
+        <div class="intro-video hd">
           <video autoplay loop muted>
             <source
               src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-hd-1.mp4"
+            />
+          </video>
+        </div>
+        <div class="intro-video square">
+          <video autoplay loop muted>
+            <source
+              src="https://www.bmw.com/video/is/content/BMW/bmwcom/bmw_com/category/Automotive%20Life/survival-guide/sg-00-teaser-high.mp4"
             />
           </video>
         </div>
